alterações no front-end

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -76,7 +76,7 @@
                                 <i class="mdi mr-2 mdi-account-check"></i><span class="hide-menu">Perfil</span></a>
                         </li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                                href="/ListDatas" aria-expanded="false"><i class="mdi mr-2 mdi-table"></i><span
+                                href="/RelatorioSimples" aria-expanded="false"><i class="mdi mr-2 mdi-table"></i><span
                                     class="hide-menu">Relatório simples</span></a></li>
                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                 href="#" aria-expanded="false" style="pointer-events: none;"><i class="mdi mr-2 mdi-table"></i><span
