--- a/templates/reports_pdf.html
+++ b/templates/reports_pdf.html
@@ -2,26 +2,32 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>       
     <h4>Relatório simples de Saúde e Bem Estar</h4>
     {% if current_user.is_authenticated %}
         <h4>Nome: {{current_user.first_name}} {{current_user.last_name}}</h4>
         <div >
-            <table style="align-items: center;">
+            <table style="text-align: center;align-items: center;" class="table user-table">
                 <thead>
                     <tr style="align-items: center;">
-                        <th>Data</th>
-                        <th>Categoria</th>
-                        <th>Batimentos Cardíacos</th>
+                        <th class="border-top-0">Data</th>
+                        <th class="border-top-0">Batimentos Cardíacos</th>
                     </tr>
                 </thead>
                 <tbody>
                     {%for res in result %}
                             <tr style="align-items: center;">
                                 <td style="text-align: center;">{{res.date}}</td>
-                                <td style="text-align: center;">{{res.id_category}}</td>
-                                <td style="text-align: center;">{{res.data}} (Batimentos Por Minuto)</td>
+                                <td style="text-align: center;">{{res.data}} BPM</td>
                             </tr>
                     {% endfor %}
                 </tbody>
